force-app/main/default/objects/Verification_Binding__mdt/Verification_Binding__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Verification Framework. Each record binds a verifiable child object to its parent lookup field. Lets the verification card render against any parent record without code changes.</description>
    <label>Verification Binding</label>
    <pluralLabel>Verification Bindings</pluralLabel>
</CustomObject>