force-app/main/default/objects/Verification_Binding__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <description>API name of the verifiable child object, e.g. UHN_Publication_Author__c.</description>
    <label>Child Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>