force-app/main/default/objects/Verification_Binding__mdt/fields/Intermediate_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Parent_Field__c</fullName>
    <description
  >Optional one-hop traversal field. When the card is placed on a grandparent record page (e.g. AAR), set this to the lookup field on that object that resolves the actual parent (e.g. UHN_Contact__c on UHN_AAR__c). The controller will query this field first, then use the resolved Id as the child lookup parent. Leave blank when the card is placed directly on the parent object.</description>
    <label>Intermediate Parent Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>