force-app/main/default/objects/Verification_Binding__mdt/fields/Parent_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field__c</fullName>
    <description>API name of the lookup field on the child object that points to the parent record (e.g. AAR__c).</description>
    <label>Parent Lookup Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>