force-app/main/default/objects/Verification_Binding__mdt/fields/Parent_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status_Field__c</fullName>
    <description
  >API name of the status field on the parent object (e.g. Status__c). When set, the verification card uses this to self-query parent status as a reliable fallback — even when the App Builder parentStatus binding is not configured.</description>
    <label>Parent Status Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>